--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "moduleResolution": "node",
     "outDir": "./dist",
     "module": "commonjs",
+    "baseUrl": "./src",
     "declaration": false,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -20,5 +21,6 @@
     "esModuleInterop": true,
     "allowJs": true
   },
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
